improve ui , add btn deleteAllWords

--- a/views/index.html
+++ b/views/index.html
@@ -130,7 +130,7 @@
         <div id="editAnotherWords" class="modal">
             <div class="modal-content">
                 <p id="totalNumb" class="flow-text">the total number of words:</p>
-                <button id="btn-delAllWords" class="btn waves-effect waves-light">delete all words</button>
+                <button id="btn-delAllWords" class="btn waves-effect waves-light btn-delAllWords">delete all words</button>
                 <ul class="collapsible popout" data-collapsible="expandable">
                     <p class="preloaderWrapper"><img src="img/preloader.gif"></p>
                 </ul>
@@ -189,6 +189,8 @@
                 <br><br>
                 <input type="checkbox" id="autoGetter"/>
                 <label for="autoGetter">auto get data from LinguaLeo</label>
+                <br><br>
+                <button class="btn waves-effect waves-light btn-delAllWords">delete all words</button>
             </div>
         </div>
 
