--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -73,6 +73,10 @@ input[type="text"], input[type="number"] {
     top: 25%;
 }
 
+#nextWordsFoEdit{
+    bottom: 20%;
+}
+
 #previousWordsFoEdit i, #nextWordsFoEdit i {
     transition: background .5s;
     font-size: 2.9rem;
@@ -90,8 +94,21 @@ input[type="text"], input[type="number"] {
     transition: background .5s;
 }
 
+#totalNumb {
+    width: 50%;
+    position: absolute;
+    top: 2%;
+    left: 17%;
+}
+
 #btn-delAllWords {
-    margin-bottom: 20px;
+    position: absolute;
+    right: 7%;
+    top: 5%;
+}
+
+#editAnotherWords ul {
+    margin-top: 65px;
 }
 
 #editAnotherWords li img {
@@ -119,6 +136,12 @@ input[type="text"], input[type="number"] {
     line-height: 100%;
     height: 100%;
     width: 100%;
+}
+
+#wrapperOfSettings .btn-delAllWords{
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
 }
 
 form[name='editWord'] span {
@@ -273,6 +296,7 @@ form[name='editWord'] span {
     #wordsLeft {
         margin-left: 80%;
     }
+
     .fixed-action-btn {
         right: auto;
     }
