improve ui on small screen

--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -10,6 +10,7 @@ html {
     background-size: cover;
 
     transition: background-color 2s;
+    /*opacity: 0;*/
 }
 
 body {
@@ -39,6 +40,8 @@ body {
 }
 
 #entering form button {
+    font-weight: 800;
+    color: rgba(0, 0, 0, 0.81);
     background: rgba(39, 39, 39, 0.71);
 }
 
@@ -48,11 +51,27 @@ body {
 }
 
 input[type] {
-    padding-left: 7px;
+    padding: 2px;
+    padding-left: 10px;
     font-size: 160%;
     height: auto;
-    margin-left: -5px;
+    margin-left: -10px;
     background: rgba(0, 0, 0, .5);
+}
+
+input[type]:focus {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.73) !important;
+    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.35) !important;
+}
+
+::-webkit-input-placeholder{
+    font-weight: 100;
+    color: rgba(255, 255, 255, 0.42);
+}
+
+::-moz-placeholder {
+    font-weight: 100;
+    color: rgba(255, 255, 255, 0.42);
 }
 
 /*
