--- a/views/index.html
+++ b/views/index.html
@@ -132,7 +132,7 @@
             <div class="modal-content">
                 <p id="totalNumb" class="flow-text">the total number of words: <span></span></p>
                 <ul class="collapsible popout" data-collapsible="expandable">
-                    <p class="preloaderWrapper"><img src="img/preloader.gif"></p>
+                    <p class="preloaderWrapper"><img src="../public/img/preloader.gif"></p>
                 </ul>
             </div>
         </div>
@@ -152,7 +152,7 @@
         </div>
     </div>
 
-    <div id="wordsLeft">
+    <div id="wordsLeft" class="hide-on-small-only">
         <p></p>
         <span>words left</span>
     </div>
