--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -68,6 +68,10 @@ input[type="text"], input[type="number"] {
     top: 20px;
 }
 
+#btn-delWord i {
+    color: #df0e1a;
+}
+
 #btn-editAnother{
     width: 40%;
     margin-top: -30px;
@@ -107,7 +111,7 @@ input[type="text"], input[type="number"] {
 }
 
 #totalNumb {
-    width: 50%;
+  /*  width: 50%;*/
     position: absolute;
     top: 2%;
     margin-left: 20px;
@@ -268,17 +272,46 @@ i.material-icons {
 }
 
 @media only screen and (max-width: 600px) {
-    #side1, #side2 {
-        font-size: 2px;
+    #side1 *, #side2 h1{
+        font-size: 40px;
+        overflow-y: scroll;
+        overflow-x: scroll;
+    }
+
+    #btn-editAnother{
+        width: 100%;
+    }
+
+    .btn-getFromLeo{
+      font-size: 13px;
+        padding: 0;
+    }
+
+    .material-tooltip{
+       display: none !important;
+    }
+
+    #wrapperOfSettings .btn-delAllWords{
+        position: static;
+        right: 0;
+        bottom: 0;
     }
 
     .btn-floating {
-        width: 20px;
-        height: 20px;
+        width: 24px;
+        height: 24px;
+    }
+
+    .grade-btns input[type="button"]{
+        line-height: 10px;
+        width: 35px;
+        height: 35px;
+        font-size: large;
     }
 
     i.material-icons {
-        font-size: 0.9rem;
+        font-size: 1.4rem;
+        margin-top: -10px;
     }
 
     #wrapperOfBtnFoWords {
@@ -287,9 +320,10 @@ i.material-icons {
     }
 
     #soundControl, #editCurrentWord {
-        width: 0;
-        top: 10px;
+
+        top: -5px;
         right: 30px;
+        margin-right: 10px;
     }
 
     #wrapperOfBtnFoWords {
@@ -301,13 +335,19 @@ i.material-icons {
     }
 
     #editCurrentWord {
-        margin-top: 100px;
+       right: 0;
     }
-
+    .btn-floating.btn-large {
+        width: 41px;
+        height: 41px;
+    }
+    button{
+        width: 100%;
+    }
     .menu {
         margin-top: -15px;
-        top: 0;
-        left: 0;
+        top: 3px;
+        left: 3px;
     }
 
     #img {
