--- a/views/login.html
+++ b/views/login.html
@@ -26,7 +26,7 @@
                 <h4>Entering/Registration:</h4>
 
                 <form name="login" autocomplete="off" class="right-align">
-                    <input name="username" tabindex="1"  type="text" placeholder="your name"><br>
+                    <input name="username" tabindex="1" type="text" placeholder="your name"><br>
                     <input name="password" tabindex="2" type="password" placeholder="your password"><br>
                     <button name="subm" tabindex="3" type="submit" class="btn waves-effect waves-light">ENTER</button>
                 </form>
@@ -36,7 +36,9 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script type="application/javascript">
+
     $(function () {
+        //    $('html').animate({'opacity', '1'}, 400);
 
         $(document.forms['login']).on('submit', function () {
 
