improve ui colors

--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div id="wrapperOfBtnFoWords" class="center-align">
-        <a id="showTranslate" class="waves-effect waves-teal btn-flat hoverable">show translate</a>
+        <a id="showTranslate" class="waves-effect waves-teal btn-flat">show translate</a>
         <div class="grade-btns">
             <input class="btn-floating" type="button" id="f0" value="0">
             <input class="btn-floating" type="button" id="f1" value="1">
@@ -103,7 +103,7 @@
         <div class="modal-content">
             <a id="btn-delWord" class="tooltipped" data-position="bottom" data-delay="50"
                data-tooltip="delete this word">
-                <i class="material-icons">delete</i>
+                <i class="material-icons waves-effect waves-light">delete</i>
             </a>
             <!--<button class="btn waves-effect waves-light" id="btn-delWord">delete word</button>-->
 
