--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -98,7 +98,6 @@ input[type="text"], input[type="number"] {
     font-size: 2.9rem;
 }
 
-
 .material-icons.delete {
     transition: background .5s;
 }
@@ -120,9 +119,14 @@ input[type="text"], input[type="number"] {
     margin-top: 65px;
 }
 
-#editAnotherWords i{
+#editAnotherWords i {
     color: #df0e1a;
 }
+
+#btn-delWord i:hover, #editAnotherWords i:hover {
+    color: #990b13;
+}
+
 #editAnotherWords li img {
     padding: 5px;
     width: 50px;
@@ -162,6 +166,42 @@ label[for="autoGetter"] {
     bottom: 20px;
     background: #A00000;
 }
+
+#wrapperOfSettings input[type="number"]{
+    line-height: 50px;
+    padding: 20px 10px;
+    font-size: larger;
+}
+
+#f0, #f1, #f2, #f3, #f4, #f5 {
+    transition: opacity .6s;
+    opacity: 0.7;
+}
+
+#f0:hover, #f1:hover, #f2:hover, #f3:hover, #f4:hover, #f5:hover{
+    opacity: 1;
+}
+
+#f0{
+    background-color: #035599;
+}
+
+#f1{
+    background-color: #9f257f;
+}
+#f2{
+    background-color: #db0628;
+}
+#f3{
+    background-color: #bc7007;
+}
+#f4{
+    background-color: #758a16;
+}
+#f5{
+    background-color: #497527;
+}
+
 
 form[name='editWord'] span {
     margin-left: -10px;
@@ -216,11 +256,12 @@ form[name='editWord'] span {
 
 i.material-icons {
     font-size: 1.9rem;
-    color: #26a69a;
+    color: #006064;
 }
 
 .btn-floating i.menu {
-    color: #004d40;
+    color: #004347;
+    font-size: 2.1rem;
 }
 
 .imgWraper {
@@ -241,11 +282,11 @@ i.material-icons {
 
 #showTranslate {
     margin: 10px;
-    transition: background .4s;
+    transition: background .5s;
 }
 
 #showTranslate:hover {
-    background: #cecece;
+    background: rgba(172, 205, 198, 0.52);
 }
 
 #wrapperOfWords {
@@ -377,10 +418,6 @@ i.material-icons {
     #editAnotherWords a {
         position: absolute;
         right: 5px;
-    }
-
-    #editAnotherWords a:active {
-        background: #c0c0c0;
     }
 
     #editAnotherWords li img {
