--- a/views/index.html
+++ b/views/index.html
@@ -25,8 +25,9 @@
         <div id="side2">
             <h1 id="translate"></h1>
             <h2 id="example" class="flow-text"></h2>
-        </div>
 
+        </div>
+        <a id="refresh" class="btn-refresh waves-effect waves-teal btn-flat">refresh</a>
         <div class="imgWraper">
             <img id="img">
 
