fixed huge bug with no reset array of words after learn ones fixed bug with time for new words (used setHours(0,0,0,0) still)

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -198,7 +198,7 @@ form[name='editWord'] span {
     margin-top: 10px;
     bottom: 30px;
     width: 50%;
-
+    display: none;
     left: 25%;
     right: 25%;
 }
