--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,8 @@
     <title>netAnki</title>
     <link rel="shortcut icon" href="/img/favicon.png" type="image/png">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection"/>
+<!--    <link type="text/css" rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection"/>-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link rel="stylesheet" href="/styles/main.css" type="text/css" media="screen"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0  user-scalable=no"/>
 </head>
@@ -256,7 +257,8 @@
 </svg>-->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 <script type="text/javascript" src="/scripts/main.js"></script>
-<script type="text/javascript" src="/scripts/materialize.min.js"></script>
+<!--<script type="text/javascript" src="/scripts/materialize.min.js"></script>-->
 </body>
 </html>
