it doesn't getWords() after edit one now

--- a/views/index.html
+++ b/views/index.html
@@ -83,7 +83,7 @@
             </li>
         </ul>
     </div>
-    <!--TODO right and top numb of words-->
+
     <div id="soundControl">
         <a class="btn-floating blue-grey lighten-4 waves-effect waves-light tooltipped" id="btn-replay"
            data-position="bottom" data-delay="50" data-tooltip="replay">
@@ -156,7 +156,7 @@
 
     <div id="wordsLeft" class="hide-on-small-only">
         <p></p>
-        <span>words left</span>
+        <span>word(s) left</span>
     </div>
 
     <div id="wrapperOfConfig">
