fix bug with no changing picture after edit its url without reload

--- a/views/index.html
+++ b/views/index.html
@@ -119,9 +119,9 @@
                 <span>example</span>
                 <input name="eexample" type="text" placeholder="enter the example">
                 <span>picture url</span>
-                <input name="epic" type="text" placeholder="enter the url of picture">
+                <input name="epic_url" type="text" placeholder="enter the url of picture">
                 <span>sound url</span>
-                <input name="esong" type="text" placeholder="enter the url of sound">
+                <input name="esound_url" type="text" placeholder="enter the url of sound">
                 <br>
                 <button class="btn waves-effect waves-light" type="submit">save</button>
             </form>
