available hot keys: alt+(0-5) - grade; alt+s - show translate

--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>netAnki</title>
+    <meta name="author" content="Maxim Torba">
+    <meta name="description"
+          content="The trainer of foreign words based on learning technique spaced repetitions, which uses sm2 algorithm">
     <link rel="shortcut icon" href="/img/favicon.png" type="image/png">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<!--    <link type="text/css" rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection"/>-->
+    <!--    <link type="text/css" rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection"/>-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link rel="stylesheet" href="/styles/main.css" type="text/css" media="screen"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0  user-scalable=no"/>
@@ -215,7 +218,8 @@
                 <ul class="flow-text">
                     <li>I use cookies for save your account id</li>
                     <li>To calculate the time of repetition words i use <a
-                            href="https://www.supermemo.com/english/ol/sm2.htm">sm2</a> algorithm
+                            href="https://www.supermemo.com/english/ol/sm2.htm" target="_blank" rel="nofollow noopener">sm2</a>
+                        algorithm
                     </li>
                     <li>After each repetition assess the quality of repetition response in 0-5 grade scale:
                         <ol reversed start="5">
@@ -224,22 +228,26 @@
                             <li>3 - correct response recalled with serious difficulty</li>
                             <li>2 - incorrect response; where the correct one seemed easy to recall</li>
                             <li>1 - incorrect response; the correct one remembered</li>
-                            <li>0 - complete blackout.
+                            <li>0 - complete blackout.</li>
                         </ol>
                     </li>
+                    <li>Use hot keys: alt+(0-5) - grade; alt+s - show translate</li>
                     <li>You will continue the repetitions of each words until all of these items score at least
                         three
                     </li>
                     <li>For a comfortable use this app, you can install this
-                        <a href="https://chrome.google.com/webstore/detail/lingualeo-english-transla/nglbhlefjhcjockellmeclkcijildjhi?utm_source=chrome-app-launcher-info-dialog">extension</a>
-                        for your browser and add new words to <a href="http://lingualeo.com/">lingualeo</a>, then
+                        <a href="https://chrome.google.com/webstore/detail/lingualeo-english-transla/nglbhlefjhcjockellmeclkcijildjhi?utm_source=chrome-app-launcher-info-dialog"
+                           target="_blank" rel="nofollow noopener">extension</a>
+                        for your browser and add new words to <a href="http://lingualeo.com/" target="_blank"
+                                                                 rel="nofollow noopener">lingualeo</a>, then
                         this application will automatically get your words. See settings.
                     </li>
                     <li>LinguaLeo do not have open api, so you need enter your email and password</li>
                     <br>
                     <li>Feedback:
                         <ul>
-                            <li><a href="http://vk.com/maxim.torba">vk.com/maxim.torba</a></li>
+                            <li><a href="http://vk.com/maxim.torba" target="_blank" rel="nofollow noopener">vk.com/maxim.torba</a>
+                            </li>
                             <li><a href="mailto:maxim.torba@gmail.com">maxim.torba@gmail.com</a></li>
                         </ul>
                     </li>
