--- a/views/login.html
+++ b/views/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+    <meta name="author" content="Maxim Torba">
+    <meta name="description" content="The trainer of foreign words based on learning technique spaced repetitions, which uses sm2 algorithm">
     <link rel="shortcut icon" href="/img/favicon.png" type="image/png">
     <link type="text/css" rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection"/>
     <link rel="stylesheet" href="/styles/login.css" type="text/css" media="screen"/>
@@ -15,9 +17,9 @@
         <div class="col s12 m6 l6 right-align flow-text">
             <p id="about">
                 Hi, here is the trainer of foreign words based on learning technique
-                <a href="https://en.wikipedia.org/wiki/Spaced_repetition">spaced repetitions</a>,
+                <a href="https://en.wikipedia.org/wiki/Spaced_repetition" target="_blank" rel="nofollow noopener">spaced repetitions</a>,
                 which uses
-                <a href="https://www.supermemo.com/english/ol/sm2.htm">sm2</a> algorithm.
+                <a href="https://www.supermemo.com/english/ol/sm2.htm" target="_blank" rel="nofollow noopener">sm2</a> algorithm.
             </p>
         </div>
         <div id="separator"></div>
